# gr-scfde

./: .gitignore  CMakeLists.txt  README
cmake/Modules/: scfdeConfig.cmake
docs/: README.scfde
docs/doxygen/: Doxyfile.in
docs/doxygen/other/: group_defs.dox  main_page.dox
examples/: README  benchmark_rx.py  benchmark_tx.py  packet.py  receive_path.py  timing_sync.py  transmit_path.py  uhd_interface.py
grc/: CMakeLists.txt  scfde_awgn_cc.xml  scfde_block_acquization_cbcb.xml  scfde_block_source_c.xml  scfde_calculate_metric_cf.xml  scfde_demod_mapper_cbb.xml  scfde_detect_peak_fb.xml  scfde_frequency_domain_equalize_cbcc.xml  scfde_frequency_sync_cbcb.xml  scfde_gen_uw.xml  scfde_insert_cp_cc.xml  scfde_insert_esti_block_ccb.xml  scfde_insert_sync_block_cbc.xml  scfde_k_offset_xx.xml  scfde_message_acquization_bb.xml  scfde_modulate_message_c.xml  scfde_pack_k_bits_bbbb.xml  scfde_parallel_to_serial_cc.xml  scfde_serial_to_parallel_cc.xml  scfde_simulation_calculate_metric_cf.xml  scfde_simulation_cfo_cf.xml  scfde_simulation_cfo_source_c.xml  scfde_simulation_equalize_cc.xml  scfde_simulation_perfect_timing_cb.xml  scfde_simulation_timing_source_c.xml
include/scfde/: CMakeLists.txt  api.h  awgn_cc.h  block_acquization_cbcb.h  block_source_c.h  calculate_metric_cf.h  demod_mapper_cbb.h  detect_peak_fb.h  frequency_domain_equalize_cbcc.h  frequency_sync_cbcb.h  gen_uw.h  insert_cp_cc.h  insert_esti_block_ccb.h  insert_sync_block_cbc.h  k_offset_xx.h  message_acquization_bb.h  modulate_message_c.h  pack_k_bits_bbbb.h  parallel_to_serial_cc.h  serial_to_parallel_cc.h  simulation_calculate_metric_cf.h  simulation_cfo_cf.h  simulation_cfo_source_c.h  simulation_equalize_cc.h  simulation_perfect_timing_cb.h  simulation_timing_source_c.h
lib/: CMakeLists.txt  awgn_cc_impl.cc  awgn_cc_impl.h  block_acquization_cbcb_impl.cc  block_acquization_cbcb_impl.h  block_source_c_impl.cc  block_source_c_impl.h  calculate_metric_cf_impl.cc  calculate_metric_cf_impl.h  demod_mapper_cbb_impl.cc  demod_mapper_cbb_impl.h  detect_peak_fb_impl.cc  detect_peak_fb_impl.h  fft.cc  fft.h  frequency_domain_equalize_cbcc_impl.cc  frequency_domain_equalize_cbcc_impl.h  frequency_sync_cbcb_impl.cc  frequency_sync_cbcb_impl.h  gen_uw.cc  insert_cp_cc_impl.cc  insert_cp_cc_impl.h  insert_esti_block_ccb_impl.cc  insert_esti_block_ccb_impl.h  insert_sync_block_cbc_impl.cc  insert_sync_block_cbc_impl.h  k_offset_xx_impl.cc  k_offset_xx_impl.h  message_acquization_bb_impl.cc  message_acquization_bb_impl.h  modulate_message_c_impl.cc  modulate_message_c_impl.h  pack_k_bits_bbbb_impl.cc  pack_k_bits_bbbb_impl.h  parallel_to_serial_cc_impl.cc  parallel_to_serial_cc_impl.h  qa_gen_uw.cc  qa_gen_uw.h  qa_scfde.cc  qa_scfde.h  (+15 more)
python/: CMakeLists.txt  __init__.py  qa_awgn_cc.py  qa_block_acquization_cbcb.py  qa_block_source_c.py  qa_calculate_metric_cf.py  qa_demod_mapper_cbb.py  qa_detect_peak_fb.py  qa_frequency_domain_equalize_cbcc.py  qa_frequency_sync_cbcb.py  qa_insert_cp_cc.py  qa_insert_esti_block_ccb.py  qa_insert_sync_block_cbc.py  qa_k_offset_xx.py  qa_message_acquization_bb.py  qa_modulate_message_c.py  qa_pack_k_bits_bbbb.py  qa_parallel_to_serial_cc.py  qa_serial_to_parallel_cc.py  qa_simulation_calculate_metric_cf.py  qa_simulation_cfo_cf.py  qa_simulation_cfo_source_c.py  qa_simulation_equalize_cc.py  qa_simulation_perfect_timing_cb.py  qa_simulation_timing_source_c.py
swig/: CMakeLists.txt  scfde_swig.i
